--- a/math.css
+++ b/math.css
@@ -6,14 +6,14 @@
 }
 
 .math {
-  padding: 5%;
+  padding: 10px;
   text-align: center;
   font-family: sans-serif;
   font-size: 8rem;
   font-weight: 700;
 }
 .answer {
-  padding: 5%;
+  padding: 10px;
   text-align: center;
   font-family: sans-serif;
   font-size: 8rem;
@@ -25,15 +25,25 @@
 }
 
 .go-button {
-  margin: 50px;
+  margin: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  padding: 10px 50px 10px;
+  color: white;
+  background-color: blue;
   font-family: sans-serif;
-  font-size: 8rem;
+  font-size: 6rem;
   font-weight: 700;
 }
 
 .delay {
   text-align: center;
-  padding: 10%;
+  padding: 100px;
+
+}
+
+#delay {
+  height: 50px;
 }
 
 datalist {
@@ -43,6 +53,8 @@ datalist {
   justify-content: space-between;
   writing-mode: horizontal-tb;
   width: 200px;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 option {
