--- a/math.css
+++ b/math.css
@@ -1,8 +1,13 @@
 
+body {
+  margin: 0 100px 0;
+}
+
 .count {
   font-family: sans-serif;
   font-size: 2rem;
   font-weight: 700;
+  padding: 25px;
 }
 
 .math {
@@ -25,7 +30,7 @@
 }
 
 .go-button {
-  margin: 30px;
+  margin: 150px;
   padding: 20px;
   border-radius: 20px;
   padding: 10px 50px 10px;
@@ -58,12 +63,13 @@ datalist {
   justify-content: space-between;
   writing-mode: horizontal-tb;
   width: 400px;
-  font-size: 2rem;
-  font-weight: 700;
+
 }
 
 option {
   padding: 0;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 input[type="range"] {
